@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 1999--2021  The R Core Team.
+ *  Copyright (C) 1999--2022  The R Core Team.
  *  Copyright (C) 1995, 1996  Robert Gentleman and Ross Ihaka
  *
  *  This program is free software; you can redistribute it and/or modify
@@ -431,9 +431,6 @@ static void R_HashDelete(int hashcode, SEXP symbol, SEXP env, int *found)
 
 static SEXP R_HashResize(SEXP table)
 {
-    SEXP new_table, chain, new_chain, tmp_chain;
-    int counter, new_hashcode;
-
     /* Do some checking */
     if (TYPEOF(table) != VECSXP)
         error("first argument ('table') not of type VECSXP, from R_HashResize");
@@ -443,18 +440,18 @@ static SEXP R_HashResize(SEXP table)
     /* hash_grow = HASHSIZE(table); */
 
     /* Allocate the new hash table */
-    new_table = R_NewHashTable((int)(HASHSIZE(table) * HASHTABLEGROWTHRATE));
-    for (counter = 0; counter < length(table); counter++)
+    SEXP new_table = R_NewHashTable(1 + (int)(HASHSIZE(table) * HASHTABLEGROWTHRATE));
+    for (int counter = 0; counter < length(table); counter++)
     {
-        chain = VECTOR_ELT(table, counter);
+        SEXP chain = VECTOR_ELT(table, counter);
         while (!ISNULL(chain))
         {
-            new_hashcode = R_Newhashpjw(CHAR(PRINTNAME(TAG(chain)))) % HASHSIZE(new_table);
-            new_chain = VECTOR_ELT(new_table, new_hashcode);
+            int new_hashcode = R_Newhashpjw(CHAR(PRINTNAME(TAG(chain)))) % HASHSIZE(new_table);
+            SEXP new_chain = VECTOR_ELT(new_table, new_hashcode);
             /* If using a primary slot then increase HASHPRI */
             if (ISNULL(new_chain))
                 SET_HASHPRI(new_table, HASHPRI(new_table) + 1);
-            tmp_chain = chain;
+            SEXP tmp_chain = chain;
             chain = CDR(chain);
             SETCDR(tmp_chain, new_chain);
             SET_VECTOR_ELT(new_table, new_hashcode, tmp_chain);
